route page was created ,settings page were updated

--- a/AviationMeteorology/Settings.plist
+++ b/AviationMeteorology/Settings.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>distance</key>
+	<string>meters</string>
 	<key>coordinates</key>
 	<string>degrees</string>
 	<key>visibility</key>
